tests/NormalTests/paczka1/fuzzy1/56320602.err
Error in line 5: CImpJj S195 68,6
Error in line 14: q9u6Pa9f S14 -6,2
Error in line 15: ddsZT6aaIjj S195 62,7
Error in line 20: S1E S1E 1E,0
Error in line 12: 8SSQ S14 21,4
Error in line 25: 8SSQ S195 29,8
Error in line 32: vFxO1N8XKl A168 88,6
Error in line 8: q9u6Pa9f S14 97,3
